# TinyEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  plan.md
cmake/: Dependencies.cmake
include/TinyEngine/Core/: Event.h  GameLoop.h  Input.h  Log.h  Timer.h  Window.h
include/TinyEngine/ECS/: Component.h  Components.h  Entity.h  Registry.h  System.h
include/TinyEngine/Graphics/: IndexBuffer.h  OrthographicCamera.h  Renderer2D.h  Shader.h  Texture2D.h  VertexArray.h  VertexBuffer.h
include/TinyEngine/Math/: Matrix4x4.h  Vector2.h  Vector3.h  Vector4.h
include/TinyEngine/Resource/: AudioCache.h  AudioClip.h  ResourceHandle.h  ResourceManager.h  TextureCache.h
include/TinyEngine/Scene/: Scene.h
src/Core/: GameLoop.cpp  Input.cpp  Log.cpp  Timer.cpp  Window.cpp
src/Graphics/: IndexBuffer.cpp  OrthographicCamera.cpp  Renderer2D.cpp  Shader.cpp  Texture2D.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Math/: Matrix4x4.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/Resource/: AudioClip.cpp
tests/: ECSTests.cpp  MathTests.cpp  ResourceTests.cpp  SceneTests.cpp
